--- a/src/main/resources/templates/matching/matchingUpdate.html
+++ b/src/main/resources/templates/matching/matchingUpdate.html
@@ -1,49 +1,50 @@
 <!DOCTYPE html>
 <html lang="ko" xmlns:th="http://www.thymeleaf.org" xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout" layout:decorate="~{layout/basic}">
 
-
-
 <th:block layout:fragment="title">
-    <title>Matching Update</title>
+    <title>YU Matching Update</title>
 </th:block>
 
-<th:block layout:fragment="content">
-    <div><h2 style="color:green">Matching Update</h2></div>
-    <br><br>
-    <div class="card-content">
-        <form id="infoForm" name="infoForm">
-            <div class="container">
-
-                <select class="form-control" name="boardtype" id="boardtype">
-                    <option id="자유게시판" name="자유게시판">자유게시판</option>
-                    <option id="잡담게시판" name="잡담게시판">잡담게시판</option>
-                    <option id="게임게시판" name="게임게시판">게임게시판</option>
-                </select>
-
+<th:block layout:fragment="article">
+    <div id="article">
+        <div class="container-fluid">
+            <div class="col-sm-auto article-header">
+                <h2>글 수정</h2>
             </div>
             <br>
-            <div>
-                <label class="col-sm-2 control-label">제목</label>
-                <div class="col-sm-10">
-                    <input type="text" id="title" name="title" class="form-control" placeholder="제목 입력" th:value="${matching.getTitle()}" required="required"/>
-                </div>
-            </div>
+            <div class="col-sm-auto">
+                <form id="infoForm" name="infoForm" role="infoForm">
+                    <!-- 매칭 게시판 선택 -->
+                    <div class="matching-select-wrap">
+                        <select class="form-control" id="boardtype" name="boardtype">
+                            <option id="청소">청소</option>
+                            <option id="배달">배달</option>
+                            <option id="역할대행">역할대행</option>
+                            <option id="심부름">심부름</option>
+                        </select>
+                    </div>
 
-            <div>
-                <label class="col-sm-2 control-label">내용</label>
-                <div class="col-sm-10">
-                    <textarea type="text" id="content" name="content" class="form-control" placeholder="내용 입력" th:utext="${matching.getContent()}" required="required"></textarea>
+                    <!-- 제목 -->
+                    <div class="matching-title-wrap">
+                        <input type="text" class="form-control" id="title" name="title" th:value="${matching.getTitle()}" placeholder="제목을 입력해 주세요" required>
+                    </div>
+                    <!-- 내용 -->
+                    <div class="matching-content-wrap">
+                        <textarea class="form-control nonesize" id="content" name="content" th:utext="${matching.getContent()}" placeholder="장소와 시간을 꼭 입력해 주세요" required></textarea>
+                    </div>
+                </form>
+                <div class="bottom-button-wrap clear">
+                    <div class="fr">
+                        <!--수정-->
+                        <button type="button" class="btn-grey" onClick="location.href='/yu/matching/matchingList?boardtype=심부름'">취소</button>
+                        <button type="button" class="btn-blue" onClick="dataSend()">수정</button>
+                    </div>
                 </div>
             </div>
-        </form>
-        <div>
-            <button type="button" class="btn btn-primary waves-effect waves-light" onclick="dataSend()">수정</button>
-            <button type="button" onClick="history.back(-1);" class="btn btn-primary waves-effect waves-light">이전</button>
         </div>
-
     </div>
-    <!-- /.card-content -->
 </th:block>
+
 <th:block layout:fragment="script">
     <script th:src="@{/scripts/ckeditor.js}">
     </script>
@@ -52,7 +53,6 @@
             var content=$('#content').val(CKEDITOR.instances.content.getData());
             let queryString = $('#infoForm').serialize() ;
             var bno=[[${matching.getBno()}]];
-            var boardtype=$('#boardtype').val();
             var title=$('#title');
             if(title.val() == "") {
                 alert("제목 입력");
