--- a/src/main/resources/templates/matching/matchingView.html
+++ b/src/main/resources/templates/matching/matchingView.html
@@ -53,36 +53,22 @@
                 <div class="comment-box">
                     <ul class="comment-list">
                         <!-- 여기를 반복문하면 될듯 -->
-                        <li class="up-content">
+                        <li class="up-content" th:each="matchingComment :${matchingCommentList}">
                             <div class="comment-info clear">
                                 <!-- 댓글작성 닉네임 -->
-                                <div class="comment-nick"><span class="comment-writer">참여자1</span></div>
+                                <div class="comment-nick"><span class="comment-writer" th:text="${matchingComment.getNickname()}"></span></div>
                                 <!-- 댓글 내용 -->
-                                <div class="comment-content clear"><p>신속하고 정확하게 수행해드리겠습니다!!</p></div>
+                                <div class="comment-content clear" th:if="${matchingComment.getCheck_delete()} == 'F'"><p th:text="${matchingComment.getContent()}"></p></div>
+                                <div class="comment-written-at" th:unless="${matchingComment.getCheck_delete()} == 'F'"><p>삭제된 댓글입니다</p></div>
                                 <!-- 댓글 날짜 -->
-                                <div class="comment-written-at"><span class="date-time">2020-11-10</span></div>
-                                <!-- 본인이 참여자 : 수정, 삭제 버튼 보이게 해주시고 / 본인이 글 작성자 : 선택하기 버튼 -->
-                                <div class="comment-option-button">
+                                <div class="comment-written-at"><span class="date-time" th:text="${matchingComment.getRegister_date()}"></span></div>
+                                <!-- 본인이 참여자 : 수정, 삭제 버튼 보이게 해주시고 / 본인이 글 작성자 : 선택하기 버튼  -->
+                                <div class="comment-option-button" th:if="${matchingComment.getCheck_delete()} == 'F'">
                                     <div class="fr">
-                                        <button type="button" class="comment-modify">수정</button>
-                                        <button type="button" class="comment-cancel">취소</button>
-                                    </div>
-                                </div>
-                            </div>
-                        </li>
-                        <li class="up-content">
-                            <div class="comment-info clear">
-                                <!-- 댓글작성 닉네임 -->
-                                <div class="comment-nick"><span class="comment-writer">참여자2</span></div>
-                                <!-- 댓글 내용 -->
-                                <div class="comment-content clear"><p>존나 일 잘합니다 시켜만주세요</p></div>
-                                <!-- 댓글 날짜 -->
-                                <div class="comment-written-at"><span class="date-time">2020-11-15</span></div>
-                                <!-- 본인이 참여자 : 수정, 삭제 버튼 보이게 해주시고 / 본인이 글 작성자 : 선택, 채팅 버튼 -->
-                                <div class="comment-option-button">
-                                    <div class="fr">
-                                        <button type="button" class="comment-select"onclick="location.href='#'">선택</button>
-                                        <button type="button" class="comment-chatting" onclick="location.href='matching-chating.html'">채팅</button>
+                                        <button type="button" th:if="${studentInfo.getSid()} == ${matchingComment.getStudentForeignkey().getSid()}" th:onClick="|showUpdateCommentForm(${matchingComment.getCno()});|" class="comment-modify">수정</button>
+                                        <button type="button" th:if="${studentInfo.getSid()} == ${matchingComment.getStudentForeignkey().getSid()} AND ${matching.getCheck_success()}!='I'" th:onClick="|return deleteComment(${matchingComment.getCno()});|" class="comment-cancel">삭제</button>
+                                        <button type="button" class="comment-select"  th:if="${studentInfo.getSid()} == ${matching.getRequest_sid()} AND ${matching.getCheck_success()}=='F'" th:onClick="|return proceedMatching(${matchingComment.getCno()});|">선택</button>
+                                        <button type="button" th:if="${studentInfo.getSid()} == ${matching.request_sid} AND ${matching.getCheck_success()}=='I'" class="comment-chatting"  th:onClick="|return openChating(${matching.getBno()});|">채팅방 들어가기</button>
                                     </div>
                                 </div>
                             </div>
@@ -90,17 +76,51 @@
                     </ul>
                 </div>
             </div>
+            <br>
+            <nav aria-label="Page navigation" th:if="${matchingCommentList.getTotalPages()} != 0">
+                <ul class="pagination justify-content-center">
+                    <li id="pagefirst">
+                        <a href="?page=0">
+                            <span class="page-link">«</span>
+                        </a>
+                    </li>
+                    <li style="cursor:pointer" id="pagePrev">
+                        <a th:onClick="|return pageMove('prev');|">
+                            <span class="page-link">&lt;</span>
+                        </a>
+                    </li>
+                    <li style="cursor:pointer" th:if="${matchingCommentList.getTotalPages()}>0" th:id="page+${num}" th:each="num: ${#numbers.sequence(0,matchingCommentList.getTotalPages()-1)}">
+                        <a th:if="${matchingCommentList.getNumber()} == ${num}" style="color:red; font-weight:bold;" class="page-link" th:href="'?'+page+'='+${num}" th:text="${num+1}"></a>
+                        <a th:unless="${matchingCommentList.getNumber()} == ${num}" class="page-link" th:href="'?'+page+'='+${num}" th:text="${num+1}"></a>
+                    </li>
+                    <li id="pageNext">
+                        <a style="cursor:pointer" th:onClick="|return pageMove('next');|">
+                            <span class="page-link">&gt;</span>
+                        </a>
+                    </li>
+                    <li>
+                        <a th:if="${matchingCommentList.getTotalPages()}>0" th:href="'?'+page+'='+${matchingCommentList.getTotalPages()-1}">
+                            <span class="page-link">»</span>
+                        </a>
+                        <a th:if="${matchingCommentList.getTotalPages()}==0" th:href="'?'+page+'='+${matchingCommentList.getTotalPages()}">
+                            <span class="page-link">»</span>
+                        </a>
+                    </li>
+                </ul>
+            </nav>
+            <br><br>
             <!-- 댓글 입력창 -->
             <div class="comment-write-wrap clear">
                 <div class="comment-write-form">
                     <!-- 댓글 입력폼 -->
                     <div class="comment-write">
-                        <textarea maxlength="400" placeholder="내용을 입력하세요."></textarea>
+                        <textarea maxlength="400" id="cTextArea" placeholder="내용을 입력하세요."></textarea>
                     </div>
                     <!-- 댓글 입력버튼 -->
                     <div class="comment-button clear">
                         <div class="fr">
-                            <button type="button" class="btn-blue">등록</button>
+                            <button id="commentCancel" type="button" class="btn-blue" style="display:none" onClick="cancelCommentForm('');">취소</button>
+                            <button id="commentRegisterButton" type="button" class="btn-blue" onClick="return registerComment();">등록</button>
                         </div>
                     </div>
                 </div>
@@ -112,8 +132,8 @@
                 </div>
                 <div class="fr">
                     <!-- 내가 쓴글이면 수정, 삭제 기능을 할수있게 만들어주세요 -->
-                    <button type="button" class="btn-grey">수정</button>
-                    <button type="button" class="btn-grey">취소</button>
+                    <button type="button" class="btn-grey" th:if="${studentInfo.getSid()} == ${matching.request_sid}" onclick="updateButtonClick()">수정</button>
+                    <button type="button" class="btn-grey" th:if="${studentInfo.getSid()} == ${matching.request_sid}" th:onClick="|return deleteMatching(${matching.getBno()});|" >삭제</button>
                 </div>
             </div>
         </div>
@@ -125,37 +145,19 @@
 
 <th:block layout:fragment="script">
 <script type="text/javascript">
-    function proceedMatching(){
-    if(confirm("요청하시겠습니까?")) {
+    function proceedMatching(cno){
+    if(confirm("선택하시겠습니까?")) {
         var bno = [[${matching.bno}]];
-        var sid = "[[${studentInfo.getSid()}]]";
-        if($('#bankname').val() == "") {
-            alert("은행 이름 입력");
-            $('#bankname').focus();
-            return false;
-        }
-        if($('#account').val() == "") {
-            alert("계좌번호 입력");
-            $('#account').focus();
-            return false;
-        }
-        if($('#accountname').val() == "") {
-            alert("계좌이름 입력");
-            $('#accountname').focus();
-            return false;
-        }
-        var account = $('#bankname').val()+", "+$('#account').val()+", "+$('#accountname').val();
         $.ajax({
             type: "PUT",
             url : "/yu/matchingProceed",
             data : {
                 bno : bno,
-                sid : sid,
-                account : account,
+                cno : cno
             },
             success : function(data){
                 if(data == true) {
-                    alert("요청 성공");
+                    alert("요청 성공, 채팅방으로 이동합니다.");
                     location.href = '/yu/matching/matchingProceeding/'+bno;
                 }
                 else
@@ -168,9 +170,20 @@
     }
     else return false;
     }
+    function openChating(bno){
+        location.href = '/yu/matching/matchingProceeding/'+bno;
+    }
+    function updateButtonClick() {
+        var check="[[${matching.check_success}]]";
+        if(check=="I"){
+            alert("진행중인 매칭입니다.");
+            return false;
+        }
+        location.href = '/yu/matching/matchingUpdate/'+[[${matching.getBno()}]] ;
+    }
     function deleteMatching(bno) {
         var check="[[${matching.check_success}]]";
-        if(check!="F"){
+        if(check=="I"){
             alert("진행중인 매칭입니다.");
             return false;
         }
@@ -184,7 +197,7 @@
                 success : function(data){
                     if(data == true) {
                         alert("게시글 삭제 성공");
-                        location.href = '/yu/matching/matchingList?boardtype=' + "[[${boardtype}]]";
+                        location.href = '/yu/matching/matchingList?boardtype=' + "[[${matching.getBoardtype()}]]";
                     }
                     else
                         alert("게시글 삭제 실패");
@@ -195,6 +208,121 @@
             });
         }
         else return false;
+    }
+    function deleteComment(cno) {
+        if(confirm("선택된 댓글을 삭제하시겠습니까?")) {
+
+            $.ajax({
+                type: "PUT",
+                url : "/yu/matchingComment/deleteMatchingComment",
+                data : {
+                    cno : cno
+                },
+                success : function(data){
+                    if(data == true) {
+                        alert("댓글 삭제 성공");
+                        location.href = location.href;
+                    }
+                    else
+                        alert("댓글 삭제 실패");
+                },error : function(){
+                    alert("Error");
+                    return false;
+                }
+            });
+        }
+        else return false;
+    }
+    function registerComment() {
+        var MatchingNumber = document.getElementsByName("matchingNumber")[0].id;
+        var sid = "[[${studentInfo.getSid()}]]";
+        var nickname = "[[${studentInfo.getNickname()}]]";
+        var content = $("#cTextArea");
+
+        if(content.val() == "") {
+            alert("내용 입력");
+            content.focus();
+            return false;
+        }
+
+
+        var data = { "bno" : MatchingNumber,
+                "sid" : sid,
+                "nickname" : nickname,
+                "content" : content.val()
+        };
+
+        $.ajax({
+            type: "POST",
+            url : "/yu/matchingComment/insertMatchingComment",
+            data : data,
+            success : function(data){
+                if(data == true) {
+                    alert("댓글 등록 성공");
+                    cancelCommentForm('');
+                    location.href = location.href;
+                }
+                else
+                    alert("댓글 등록 실패");
+            },error : function(){
+                alert("Error");
+                return false;
+            }
+        });
+    }
+    function updateComment(cno) {
+        var matchingNumber = document.getElementsByName("matchingNumber")[0].id;
+        var sid = "[[${studentInfo.getSid()}]]";
+        var nickname = "[[${studentInfo.getNickname()}]]";
+        var content = $("#cTextArea");
+
+        if(content.val() == "") {
+            alert("내용 입력");
+            content.focus();
+            return false;
+        }
+
+        $.ajax({
+            type: "PUT",
+            url : "/yu/matchingComment/updateMatchingComment",
+            data : {
+                bno : matchingNumber,
+                cno : clickCommentCno,
+                content : content.val()
+            },
+            success : function(data){
+                if(data == true) {
+                    alert("댓글 수정 성공");
+                    location.href = location.href;
+                }
+                else
+                    alert("댓글 수정 실패");
+            },error : function(){
+                alert("Error");
+                return false;
+            }
+        });
+    }
+    function showUpdateCommentForm(cno) {
+        clickCommentCno = cno;
+
+        if($("#toComment").html() != "") $("#toComment").html("");
+        $("#cTextArea").attr("placeholder", "수정될 댓글을 입력하세요");
+        $("#commentRegisterButton").html("수정");
+        $("#commentRegisterButton").attr("onClick", "return updateComment('" + cno + "')");
+        $("#commentCancel").attr("onClick", "cancelCommentForm('u');");
+        $("#commentCancel").css("display", "inline-block");
+    }
+
+    function cancelCommentForm(part) {
+        $("#cTextArea").val("");
+        $("#cTextArea").attr("placeholder", "댓글을 입력하세요");
+        $("#commentCancel").css("display", "none");
+
+        if(part == "u") {
+            $("#commentRegisterButton").html("등록");
+        }
+        if($("#toComment").html() != "") $("#toComment").html("");
     }
     function cancelMatchingForm(part) {
         document.getElementById(part + "matchingForm").style.display = "none";
